--- a/extensions/mongodb-client/runtime/pom.xml
+++ b/extensions/mongodb-client/runtime/pom.xml
@@ -64,6 +64,21 @@
         </dependency>
 
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-opentracing</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!-- Should the dependency be included in quarkus-smallrye-opentracing? -->
+        <dependency>
+          <groupId>io.opentracing.contrib</groupId>
+          <artifactId>opentracing-mongo-common</artifactId>
+          <!-- NOTE. should the version be added to the quarkus-bom? -->
+          <version>0.1.5</version>
+          <!-- Enable if the dependency is included in the quarkus-smallrye-opentracing     
+          <optional>true</optional> -->
+        </dependency>
+
+        <dependency>
             <groupId>org.graalvm.nativeimage</groupId>
             <artifactId>svm</artifactId>
         </dependency>
