--- a/bom/application/pom.xml
+++ b/bom/application/pom.xml
@@ -26,6 +26,7 @@
         <opentracing-concurrent.version>0.2.0</opentracing-concurrent.version>
         <opentracing-jdbc.version>0.0.12</opentracing-jdbc.version>
         <opentracing-kafka.version>0.1.13</opentracing-kafka.version>
+        <opentracing-mongo.version>0.1.5</opentracing-mongo.version>
         <jaeger.version>0.34.3</jaeger.version>
         <quarkus-http.version>3.0.18.Final</quarkus-http.version>
         <jboss-servlet-api_4.0_spec.version>1.0.0.Final</jboss-servlet-api_4.0_spec.version>
@@ -2677,6 +2678,11 @@
                 <groupId>io.opentracing.contrib</groupId>
                 <artifactId>opentracing-kafka-client</artifactId>
                 <version>${opentracing-kafka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.opentracing.contrib</groupId>
+                <artifactId>opentracing-mongo-common</artifactId>
+                <version>${opentracing-mongo.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.rest-assured</groupId>
